--- a/HuseKnives/Views/Shared/_Layout.cshtml
+++ b/HuseKnives/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
             <nav class="navbar navbar-default navbar-fixed-top">
                 <div class="container">
                     <div class="navbar-header">
-                        <a href="/" class="navbar-brand"><img src="~/huseknives-logo.png" alt="Huse Knives" width="70" height="65"></a>
+                        <a href="/" class="navbar-brand"><img src="~/images/huseknives-logo.png" alt="Huse Knives" width="70" height="65"></a>
                         <div class="navbar-buttons">
                             <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle navbar-btn">Menu<i class="fa fa-align-justify"></i></button>
                         </div>
