--- a/HuseKnives/Views/Inventories/Details.cshtml
+++ b/HuseKnives/Views/Inventories/Details.cshtml
@@ -5,12 +5,21 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
 
-<div>
+
+<div style="margin-top: 60px">
     <h4>Knife Information</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            
+        </dt>
+
+        <dd>
+            <img class="img" src="@Url.Action(Model.Image.ImageName, "images", new { Area =""})"
+                 style="width:150px;height:150px " />
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.WeaponName)
         </dt>
@@ -67,17 +76,17 @@
             @Html.DisplayFor(model => model.Price)
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.IsActive)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.IsActive)
-        </dd>
+        </dd>*@
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |*@
     @Html.ActionLink("Back to List", "Index")
 </p>
